docs: add documentacao para atualizar uma vaga
